--- a/teammembers.htm
+++ b/teammembers.htm
@@ -22,9 +22,9 @@ p
 <p class="title" style="margin-bottom: 0.5cm; text-align:center">
 <b><font size="5">TEAM MEMBERS</font></b></p>
 <p class="title" style="margin-bottom: 0.5cm"><font size="4"><b>Current members:</b></font></p>
-<table border="0" width="56%">
+<table border="0" width="69%">
 	<tr>
-		<td width="894" height="0" align="center" valign="top" colspan="4">
+		<td width="1112" height="0" align="center" valign="top" colspan="5">
 		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 		<font size="4" face="Times New Roman"><b><u>Senior researchers<span lang="en-us"> 
 		and postdoctoral research fellows</span></u>:</b></font></td>
@@ -37,8 +37,10 @@ p
 		<img border="0" src="Mohammad.jpg" width="145" height="150"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Hanlin.jpg" width="157" height="149"></td>
-		<td height="0" align="center" valign="top" width="223">
+		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
+		<td height="0" align="center" valign="top" width="222">
+		<img border="0" src="Jukka.png" width="113" height="152"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -47,11 +49,13 @@ p
 		<font face="Times New Roman"><b>Dr. Mohammad SABOKROU</b></font></td>
 		<td height="0" align="center" valign="top" width="209">
 		<font face="Times New Roman"><b>Dr. Hanlin MO</b></font></td>
-		<td height="0" align="center" valign="top" width="223">
+		<td height="0" align="center" valign="top" width="225">
 		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
+		<td height="0" align="center" valign="top" width="222">
+		<font face="Times New Roman"><b>Dr. Jukka KOMULAINEN </b></font></td>
 	</tr>
 	<tr>
-		<td width="880" height="0" align="center" valign="top" colspan="4">
+		<td width="1112" height="0" align="center" valign="top" colspan="5">
 		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman" size="4"><b><u>Ph. D. <span lang="en-us">
 		candidates</span></u>:</b></font></td>
@@ -63,8 +67,10 @@ p
 		<img border="0" src="Haoyu.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Yante.jpg"></td>
-		<td height="0" align="center" valign="top" width="223">
+		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Abdu.jpg" width="131" height="147"></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -76,9 +82,11 @@ p
 		<td height="0" align="center" valign="top" width="209">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Ms. Yante LI</font></b></td>
-		<td height="0" align="center" valign="top" width="223">
+		<td height="0" align="center" valign="top" width="225">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Abdelrahman MOSTAFA</font></b></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -87,8 +95,10 @@ p
 		<img border="0" src="Marko.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Atif.jpg"></td>
-		<td height="0" align="center" valign="top" width="223">
+		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Henglin.jpg" width="130" height="141"></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -100,9 +110,11 @@ p
 		<td height="0" align="center" valign="top" width="209">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Atif SHAH</font></b></td>
-		<td height="0" align="center" valign="top" width="223">
+		<td height="0" align="center" valign="top" width="225">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Henglin SHI</font></b></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -111,8 +123,10 @@ p
 		<img border="0" src="Tuomas.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Zitong.jpg"></td>
-		<td height="0" align="center" valign="top" width="223">
+		<td height="0" align="center" valign="top" width="225">
 		　</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -124,11 +138,13 @@ p
 		<td height="0" align="center" valign="top" width="209">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
 		<font face="Times New Roman">Mr. Zitong YU</font></b></td>
-		<td height="0" align="center" valign="top" width="223">
+		<td height="0" align="center" valign="top" width="225">
 		　</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	<tr>
-		<td width="880" height="0" align="center" valign="top" colspan="4">
+		<td width="1112" height="0" align="center" valign="top" colspan="5">
 		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman" size="4"><b><u>Visiting researchers</u><span lang="en-us">:</span></b></font></td>
 	</tr>
@@ -139,8 +155,10 @@ p
 		<img border="0" src="Xu.jpg" width="125" height="143"></td>
 		<td height="0" align="center" valign="top" width="209">
 		　</td>
-		<td height="0" align="center" valign="top" width="223">
+		<td height="0" align="center" valign="top" width="225">
 		　</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -152,8 +170,10 @@ p
 		2022</font></td>
 		<td height="0" align="center" valign="top" width="209">
 		　</td>
-		<td height="0" align="center" valign="top" width="223">
+		<td height="0" align="center" valign="top" width="225">
 		　</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	</table>
 <p class="title" style="line-height: 150%; margin-top:1cm">
