--- a/Pic.htm
+++ b/Pic.htm
@@ -24,6 +24,8 @@
     		Center for Machine 
     Vision <span lang="en-us">and Signal Analysis</span>, University of Oulu<span lang="en-us">, 
 	Finland</span>.</font></p>
+	<p align="center"><font face="Times New Roman">IEEE Fellow, IAPR Fellow and 
+	AAIA Fellow</font></p>
 
 <p align="center">
     <img border="0" src="Guoying3.jpg" width="338" height="199"></p>
