--- a/personal.htm
+++ b/personal.htm
@@ -55,8 +55,8 @@ selected to Prestigious Academy Professor position. She has
 authored or co-authored more than <span lang="en-us">27</span>0 papers in journals and conferences, and 
 has served </span> </font><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">as a reviewer for many journals and conferences. Her papers have 
-currently over 1<span lang="en-us">70</span>00 citations in Google Scholar 
-(h-index 62). She was Co-Program chair of ACM International Conference on Multimodal 
+currently over 1<span lang="en-us">77</span>00 citations in Google Scholar 
+(h-index 64). She was Co-Program chair of ACM International Conference on Multimodal 
 Interaction 2021 (ICMI), and Special 
 Sessions/Panels Chairs for FG 2023. She was general chair for ICBEA (2019, 2020), Co-Chair for Late Breaking 
 Results of ICMI 2019, co-publicity c</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">hair 
@@ -76,9 +76,8 @@ Scholarsh</font></span><font size="4"><span style="font-family: Times New Roman;
 Endeavour Research Fellowship, Ta</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">uno T&ouml;nning Research funding<span lang="en-us">, 
 Kauta Foundation grant</span> 
 and Jorma Ollila grant. </font> </span><font size="4">
-<span style="font-family: Times New Roman; font-weight: normal">She is IAPR 
-Fellow, AAIA Fellow, IEEE 
-Senior Member. Her current research interests include image and video 
+<span style="font-family: Times New Roman; font-weight: normal">She is IEEE 
+Fellow, IAPR Fellow and AAIA Fellow. Her current research interests include image and video 
 descriptors, gait analysis, dynamic-texture recognition, facial-expression 
 recognition, human motion analysis, and person identification. Her research has 
 been reported by Finnish TV programs, newspapers and MIT Technology Review. </span></font></p>
