--- a/teammembers.htm
+++ b/teammembers.htm
@@ -40,7 +40,7 @@ p
 		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
 		<td height="0" align="center" valign="top" width="222">
-		<img border="0" src="Jukka.png" width="112" height="148"></td>
+		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -52,7 +52,31 @@ p
 		<td height="0" align="center" valign="top" width="225">
 		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
 		<td height="0" align="center" valign="top" width="222">
+		&nbsp;</td>
+	</tr>
+	<tr>
+		<td height="0" align="center" valign="top" width="222">
+		<img border="0" src="Jukka.png" width="112" height="148"></td>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Yang.jpg" width="148" height="147"></td>
+		<td height="0" align="center" valign="top" width="209">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="222">
+		&nbsp;</td>
+	</tr>
+	<tr>
+		<td height="0" align="center" valign="top" width="222">
 		<font face="Times New Roman"><b>Dr. Jukka KOMULAINEN </b></font></td>
+		<td width="226" height="0" align="center" valign="top">
+		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
+		<td height="0" align="center" valign="top" width="209">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="222">
+		&nbsp;</td>
 	</tr>
 	<tr>
 		<td width="1112" height="0" align="center" valign="top" colspan="5">
@@ -141,6 +165,35 @@ p
 		<td height="0" align="center" valign="top" width="225">
 		　</td>
 		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
+	</tr>
+	<tr>
+		<td width="1112" height="0" align="center" valign="top" colspan="5">
+		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman" size="4"><b><u>Master students</u></b></font></td>
+	</tr>
+	<tr>
+		<td width="223" height="0" align="center" valign="top">
+		<img title="Yar Zar Moe Myint" src="https://media-exp1.licdn.com/dms/image/C5103AQFOPkE3dIIUzQ/profile-displayphoto-shrink_400_400/0/1548060680026?e=1648080000&v=beta&t=6m4bkv6f7LIVLoTd8Uevd6fkBfy0y12HLWq_zKOWyQc" alt="Yar Zar Moe Myint" id="ember35" class="pv-top-card-profile-picture__image pv-top-card-profile-picture__image--show ember-view" width="200" height="200"></td>
+		<td width="223" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
+		&nbsp;</td>
+	</tr>
+	<tr>
+		<td width="223" height="0" align="center" valign="top">
+		<b><font face="Times New Roman">Yar Moe M</font></b><span lang="zh-cn"><b><font face="Times New Roman">YINT</font></b></span></td>
+		<td width="223" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
 	</tr>
 	<tr>
