--- a/main_experience.htm
+++ b/main_experience.htm
@@ -107,7 +107,9 @@ Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span><
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt; margin-bottom: 0cm; line-height:150%; text-autospace:ideograph-numeric ideograph-other">
 	<font size="4"><span style="color: black">
-	2022.01-2025.12: <b>INFOTECH project</b>: <b>Towards Secure and 
+	2022.01-2025.12: <b>Infotech </b></span></font><b>
+	<span lang="EN-US" style="color: black">
+	<font size="4">spearhead</font></span></b><font size="4"><span style="color: black"><b> project</b>: <b>Towards Secure and 
 	Reliable Deep Learning Systems against Adversarial Attacks</b>. 336 000 &#8364;</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 21.0pt; margin-bottom: 0cm">
