--- a/teammembers.htm
+++ b/teammembers.htm
@@ -148,7 +148,7 @@ p
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Zitong.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
-		　</td>
+		　<img border="0" src="Hui.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
@@ -163,7 +163,8 @@ p
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
 		<font face="Times New Roman">Mr. Zitong YU</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
-		　</td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">　<b><font face="Times New Roman">Mr. 
+		Hui ZHANG</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
