--- a/publications.htm
+++ b/publications.htm
@@ -150,48 +150,58 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font size="5"><b>2022</b></font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;</font><font size="4" face="Times New Roman">27<span lang="en-us">5</span>. 
+<font face="Times New Roman" size="4">&nbsp;</font><font size="4" face="Times New Roman">27<span lang="en-us">7</span>. 
 Wei Peng, Tuomas Varanka, Abdelrahman Mostafa, Henglin Shi, <b>Guoying Zhao</b>.
 <u>Hyperbolic Deep Neural Networks: A Survey</u>. IEEE Transactions on Pattern 
 Analysis and Machine Intelligence journal (TPAMI). 2022.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">74</span>. Xiaohua 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">76</span>. Xiaohua 
 Huang, Abhinav Dhall, Roland Goecke, Matti Pietik&auml;inen, <b>Guoying Zhao</b>. 
 <u>Analyzing group-level emotion with global alignment kernel based approach</u>. IEEE 
 Transactions on Affective Computing, 2020. </font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">73</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">75</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
 Ahola, Xiaohua Huang, <b>Guoying Zhao</b>. <u>Leaders and followers identified 
 by emotional mimicry during collaborative learning: A facial expression 
 recognition study on emotional valence</u>. IEEE Transactions on Affective 
 Computing, 2021. </font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font size="4" face="Times New Roman">&nbsp;27<span lang="en-us">2</span>. Henglin Shi, Wei 
+<font size="4" face="Times New Roman">&nbsp;27<span lang="en-us">4</span>. Henglin Shi, Wei 
 Peng, Haoyu Chen, Xin Liu, <b>Guoying Zhao</b>. <u>Multi-scale 3D Shift 
 Graph Convolution Network for Emotion Recognition from 
 Human Actions</u>. IEEE Intelligent Systems. 
 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
-<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">1</span>. Muzammil Behzad, Xiaobai Li, <b>Guoying Zhao</b>. 
+<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">3</span>. Muzammil Behzad, Xiaobai Li, <b>Guoying Zhao</b>. 
 <u>Disentangling 3D/4D Facial Affect Recognition with Faster 
 Multi-view Transformer</u>. IEEE Signal Processing Letters. 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
-<font face="Times New Roman" size="4">&nbsp;270. Dong Huang, Xiaoyi Feng, Haixi 
+<font face="Times New Roman" size="4">&nbsp;272. Li Ji, Qinghui Zhu, Yongqin 
+Zhang, Juanjuan Yin, Ruyi Wei, Jinsheng Xiao, Deqiang Xiao, <b>Guoying Zhao</b>.
+<u>Cross-Domain Heterogeneous Residual Network for Single Image Super-Resolution</u>. 
+Neural Networks, 2022.</font></p>
+<p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
+<font face="Times New Roman" size="4">&nbsp;271. Dong Huang, Xiaoyi Feng, Haixi 
 Zhang, Zitong Yu, Jinye Peng, <b>Guoying Zhao</b>, Zhaoqiang Xia.&nbsp; <u>Spatio-Temporal Pain Estimation Network with Measuring Pseudo Heart Rate Gain</u>. 
 IEEE Trans. on Multimedia, 2021.</font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;269. </font>
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;270. </font>
 </span><font face="Times New Roman" size="4">Beijing Chen, Xin Liu, Yuhui Zheng,
 <b>Guoying Zhao</b>, and Yun-Qing Shi. <u>A robust GAN-generated face detection 
 method based on dual-color spaces and an improved Xception</u>. IEEE 
 Transactions on Circuits and Systems for Video Technology (TCSVT), 2022. </font>
 </p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;268. Haoyu Chen, Hao Tang, Zitong 
+<font face="Times New Roman" size="4">&nbsp;269. Haoyu Chen, Hao Tang, Zitong 
 Yu, Nicu Sebe, <b>Guoying Zhao</b>. <u>Geometry-Contrastive Transformer for 
 Generalized 3D Pose Transfer</u>. AAAI Conference on Artificial Intelligence (AAAI 
 2022). (Acceptance rate: 15%) </font>
 </p>
+<p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;268. Mozhgan PourKeshavarzi, <b>
+Guoying Zhao</b>, Mohammad Sabokrou. <u>Looking Back on Learned Experiences for 
+Class/Task Incremental Learning</u>. The International Conference on Learning 
+Representations (ICLR), 2022.</font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">67</span>. Anja Keskinarkaus, Ruijing 
 Yang, Angelos Fylakis, Md. Surat-E-Mostafa, Arto Hautala, Yong Hu, Jinye Peng,
