--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -160,12 +160,23 @@ ul
 AWARDS</span></b></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
-<font size="4">-- Award of Academy Professor from </font>
+<font size="4">-- </font></span><font size="4">
+<span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
+IEEE Fellow (for contributions to facial expression analysis and feature 
+representation), 2022-.</span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4">
+<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
+-- Award of Academy Professor from
 <span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">
-<font size="4">Academy of Finland, 2020</font></span></span></p>
+Academy of Finland, 2020</span></span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4"><span style="font-family: Times New Roman">-- </span>
+<span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
+Fellow of Asia-Pacific Artificial Intelligence Association (AAIA), 2021-.</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
-<font size="4">-- IAPR Fellow, 2020 (For contributions to video analysis and 
+<font size="4">-- IAPR Fellow, 2020- (For contributions to video analysis and 
 affective computing).</font></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4">
@@ -297,19 +308,35 @@ Supervision/Co-Supervision</span></p>
 <span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold; text-decoration:underline">
 Postdoctoral researchers: </span></p>
 <p style="line-height: 200%" class="MsoNormal">
-<span style="font-family: Times New Roman"><font size="4">--&nbsp; Dr. <b>Xin Liu</b>: 
-2019-present</font></span></p>
+<font size="4"><span style="font-family: Times New Roman">--&nbsp;Dr. <b>Jukka 
+Komulainen</b>: 2022-present</span></font></p>
 <p style="line-height: 200%" class="MsoNormal">
-<span style="font-family: Times New Roman"><font size="4">--&nbsp; Dr. <b>Nhat Vo</b>: 
+<font size="4"><span style="font-family: Times New Roman">-- Dr. <b>Yang Liu</b>: 
+2022-present</span></font></p>
+<p style="line-height: 200%" class="MsoNormal">
+<font size="4"><span style="font-family: Times New Roman">-- Dr. <b>Qianru Xu</b>: 
+2021-present</span></font></p>
+<p style="line-height: 200%" class="MsoNormal">
+<font size="4"><span style="font-family: Times New Roman">-- Dr. <b>Hanlin Mo</b>: 
+2021-present</span></font></p>
+<p style="line-height: 200%" class="MsoNormal">
+<font size="4"><span style="font-family: Times New Roman">-- Dr. <b>Kevin 
+Cheng</b>: 2021-present</span></font></p>
+<p style="line-height: 200%" class="MsoNormal">
+<span style="font-family: Times New Roman"><font size="4">--&nbsp;Dr. <b>Xin Liu</b>: 
+2019-</font></span><font size="4"><span style="font-family: Times New Roman">2020</span></font></p>
+<p style="line-height: 200%" class="MsoNormal">
+<span style="font-family: Times New Roman"><font size="4">--&nbsp;Dr. <b>Nhat Vo</b>: 
 2018-2020</font></span></p>
 <p style="line-height: 200%" class="MsoNormal">
-<span style="font-family: Times New Roman"><font size="4">--&nbsp; Dr. <b>Xiaobai Li</b>: 
+<span style="font-family: Times New Roman"><font size="4">--&nbsp;Dr. <b>Xiaobai Li</b>: 
 2017-2020</font></span></p>
 <p style="line-height: 200%" class="MsoNormal">
-<span style="font-family: Times New Roman"><font size="4">--&nbsp; Dr. <b>Jingang Shi</b>: 
+<span style="font-family: Times New Roman"><font size="4">--&nbsp;Dr. <b>Jingang Shi</b>: 
 2017-2020</font></span></p>
 <p style="line-height: 200%" class="MsoNormal">
-<span style="font-family: Times New Roman"><font size="4">-- Dr. <b>Mohammad Sabokrou</b>: 2018</font></span></p>
+<span style="font-family: Times New Roman"><font size="4">-- Dr. <b>Mohammad Sabokrou</b>: 2018, 
+2021</font></span></p>
 <p style="line-height: 200%" class="MsoNormal">
 <span style="font-family: Times New Roman"><font size="4">-- Dr. <b>Xiaohua Huang</b>: 
 2015-2019</font></span></p>
@@ -327,12 +354,18 @@ Ghahramani</b>: 2012-2013</font></span></p>
 <p class="MsoNormal" style="line-height: 200%">
 <span lang="en-US" style="font-family: Times New Roman"><font size="4">&nbsp;</font></span><span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold; text-decoration:underline">Ph. 
 D. dissertations:</span></p>
+<p class="MsoNormal" style="line-height: 200%">
+<font face="Times New Roman" size="4">--
+<b>Ms. Hui Zhang</b>, Ph.D. student: 2022-present&nbsp; (Main Supervisor)</font></p>
+<p class="MsoNormal" style="line-height: 200%">
+<font face="Times New Roman" size="4">--
+<b>Mr. Marko Savic</b>, Ph.D. student: 2021-present&nbsp; (Main Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
 <b>Mr. Atif Shah</b>, Ph.D. student: 2020-present&nbsp; (Main Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Mr. Tuomas Varanka</b>, Ph.D. student: 2020-present&nbsp; (Main Supervisor)</font></p>
+<b>Mr. Tuomas Varanka</b>, Ph.D. student: 2021-present&nbsp; (Co-Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
 <b>Mr. Abdelrahman Mostafa</b>, Ph.D. student: 2020-present (Main Supervisor)</font></p>
@@ -349,30 +382,30 @@ analysis (Main Supervisor)</font></p>
 2018-present: Multi-modal learning (Main Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Henglin Shi</b>: Ph.D. student: 2017-present: Learning based gesture and 
+<b>Mr. Henglin Shi</b>: Ph.D. student: 2017-present: Learning based gesture and 
 micro-gesture analysis (Main Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Haoyu Chen</b>: Ph.D. student: 2017-present: Non-communicative behavior 
+<b>Mr. Haoyu Chen</b>: Ph.D. student: 2017-present: Non-communicative behavior 
 analysis with computer vision methods for hidden emotion understanding (Main 
 Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Yante Li</b>, Ph.D. student: 2017-present: Quantifying Human Experience for 
+<b>Ms. Yante Li</b>, Ph.D. student: 2017-present: Quantifying Human Experience for 
 Increased Intelligence Within Work Teams and in the Customer Interface (Main 
 Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Khanh Tran-Thuong</b>: Ph. D. student: 2016-present: Micro-expression 
+<b>Mr. Khanh Tran-Thuong</b>: Ph. D. student: 2016-present: Micro-expression 
 analysis (Main Supervisor)</font></p>
 <p class="MsoNormal" style="line-height: 200%">
-<font size="4" face="Times New Roman">-- <b>Yingyue Xu</b>: Computational Modeling for 
+<font size="4" face="Times New Roman">-- <b>Ms. Yingyue Xu</b>: Computational Modeling for 
 Visual Attention Analysis, 2015-20</font><font size="4"><span style="font-family: Times New Roman">20 </span>
 </font>
 <span lang="EN-US" style="font-family: 'Times New Roman'"><font size="4">(Main 
 Supervisor)</font></span></p>
 <p class="MsoNormal" style="line-height: 200%">
-<span lang="EN-US"><font size="4" face="Times New Roman">-- </font></span>
+<span lang="EN-US"><font size="4" face="Times New Roman">-- <b>Mr. </b> </font></span>
 <font size="4">
 <span lang="en-US" style="font-family: Times New Roman; font-weight: bold">Xin 
 Liu</span><span lang="en-US" style="font-family: Times New Roman">: 
@@ -384,6 +417,7 @@ Supervisor</span></font><span lang="en-US" style="font-family: Times New Roman">
 <span lang="EN-US"><font size="4" face="Times New Roman">-- </font></span>
 <font size="4">
 <span lang="en-US" style="font-family: Times New Roman; font-weight: bold">
+Ms.
 Xiaobai Li</span><span lang="en-US" style="font-family: Times New Roman">: </span>
 <span lang="EN-US" style="font-family: 'Times New Roman'">Reading Subtle 
 Information From Human Faces, </span>
@@ -391,7 +425,7 @@ Information From Human Faces, </span>
 <p class="MsoNormal" style="line-height: 200%">
 <span lang="EN-US"><font size="4" face="Times New Roman">-- </font></span>
 <font size="4">
-<span lang="en-US" style="font-family: Times New Roman; font-weight: bold">Xiaohua 
+<span lang="en-US" style="font-family: Times New Roman; font-weight: bold">Mr. Xiaohua 
 Huang</span><span lang="en-US" style="font-family: Times New Roman">: </span>
 </font>
 <span lang="EN-US" style="font-family: 'Times New Roman'"><font size="4">Methods for 
@@ -400,7 +434,7 @@ facial expression recognition with applications in challenging situations,
 <p class="MsoNormal" style="line-height: 200%">
 <span lang="EN-US"><font size="4" face="Times New Roman">-- </font></span>
 <font size="4">
-<span lang="en-US" style="font-family: Times New Roman; font-weight: bold">Yimo 
+<span lang="en-US" style="font-family: Times New Roman; font-weight: bold">Ms. Yimo 
 Guo</span><span lang="en-US" style="font-family: Times New Roman">: Image and 
 video analysis by local descriptors and deformable image registration, 2008-2013 </span>
 </font>
@@ -408,12 +442,16 @@ video analysis by local descriptors and deformable image registration, 2008-2013
 <p class="MsoNormal" style="line-height: 200%">
 <span lang="EN-US"><font size="4" face="Times New Roman">-- </font></span>
 <font size="4">
-<span lang="en-US" style="font-family: Times New Roman; font-weight: bold">Vili 
+<span lang="en-US" style="font-family: Times New Roman; font-weight: bold">Mr. Vili 
 Kellokumpu</span></font><span lang="en-US" style="font-family: Times New Roman"><font size="4">: 
 Vision-based human motion description and recognition, 2006-2011 (Advisor)</font></span></p>
 <p class="MsoNormal" style="line-height: 200%; margin-right: -.7pt">
 <span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold; text-decoration:underline">
 Master theses:</span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
+<font size="4"><span style="font-family: Times New Roman">Mr. </span></font>
+		<b><font face="Times New Roman">Yar Moe M</font></b><font face="Times New Roman"><b><span lang="zh-cn">YINT </span></b></font>
+<font size="4"><span style="font-family: Times New Roman">(2020-);</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: 'Times New Roman'; "><font size="4">Ms. <b>Mei 
 Ren </b>(2019-); </font> </span></p>
