--- a/main_experience.htm
+++ b/main_experience.htm
@@ -112,6 +112,11 @@ Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span><
 	<font size="4">spearhead</font></span></b><font size="4"><span style="color: black"><b> project</b>: <b>Towards Secure and 
 	Reliable Deep Learning Systems against Adversarial Attacks</b>. 336 000 &#8364;</span></font></li>
 	<li>
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt; margin-bottom: 0cm; line-height:150%; text-autospace:ideograph-numeric ideograph-other">
+	<font size="4">2022.03.01-2024.02.29: Mobility cooperation with India, China 
+	or Germany, funded by Academy of Finland, 12 990 <span style="color: black">
+	&#8364;.</span></font></li>
+	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2021.01.01-2022.12.31: <b>AI Forum</b>: 
 	Artificial Intelligence Digital Revolution, funded by Ministry of Education 
@@ -142,7 +147,8 @@ Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span><
 	500&#8364;.</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 21.0pt; margin-bottom:0cm">
-	<font size="4"><span style="color: black">2018.01.01-2019.12.31: <b>Tekes 
+	<font size="4"><span style="color: black">2018.01.01-2019.12.31: <b>Business 
+	Finland 
 	funded project: Quantifying Human Experience for Increased Intelligence 
 	Within Work Teams and in the Customer Interface. </b>Total appropriation: 
 	318 756&#8364;.</span></font></li>
@@ -154,7 +160,7 @@ Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span><
 	</font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 21.0pt; margin-bottom:0cm">
-	<b><span lang="EN-US" style="color: black"><font size="4">Tekes Fidipro 
+	<b><span lang="EN-US" style="color: black"><font size="4">Business Finland Fidipro 
 	Fellow project </font></span></b><span lang="EN-US" style="color: black">
 	<font size="4">(2016.01.01-2019.12.31): </font></span><span lang="EN-US">
 	<font size="4">Facial Behaviour Analysis ''in-the-wild''. (<b>PI: Guoying Zhao</b>, 
