--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -159,11 +159,14 @@ a{font-family:arial,sans-serif}
 <span style="font-family: Times New Roman"><font size="5">PROFESSIONAL 
 ACTIVITIES</font></span></b></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
+<font size="4">-- </font><b><font size="4" face="Times New Roman"><u>2022-present, IEEE 
+Fellow</u> </font></b></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- </font><u><b><font size="4" face="Times New Roman">2020-present, 
 IAPR Fellow</font></b></u></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
-<font size="4">-- </font><b><font size="4" face="Times New Roman"><u>2012-present, IEEE 
-Senior Member</u> </font></b></p>
+<font size="4">-- <b><u><span style="font-family: Times New Roman">2021-present, 
+AAIA Fellow</span></u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- <b><u><span style="font-family: Times New Roman">Co-Program 
 chair of ACM International Conference on Multimodal Interaction 2021 (ICMI).</span></u></b></font></p>
