--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -176,6 +176,13 @@ Sessions/Panels Chairs for FG 2023</span></u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; line-height:200%">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
+-- </span></font><font size="4"><b><u>
+<span style="font-family: Times New Roman">General chair</span></u></b><span style="font-family: Times New Roman"> 
+of &nbsp;2022 International Conference on Image Processing and Media Computing (ICIPMC 
+2022), May 27-29, 2022 Xi'an, China. </span></font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; line-height:200%">
+<font size="4">
+<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US" style="font-family: Times New Roman"><font size="4">Co-publicity chair of Conference on Automatic Face and Gesture Recognition (FG 
 2018). </font> </span></u></b></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; line-height:200%">
