--- a/publications.htm
+++ b/publications.htm
@@ -150,81 +150,94 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font size="5"><b>2022</b></font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;</font><font size="4" face="Times New Roman">27<span lang="en-us">9</span>. 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">81</span>. 
 Wei Peng, Tuomas Varanka, Abdelrahman Mostafa, Henglin Shi, <b>Guoying Zhao</b>.
 <u>Hyperbolic Deep Neural Networks: A Survey</u>. IEEE Transactions on Pattern 
 Analysis and Machine Intelligence journal (TPAMI). 2022.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">78</span>. Xiaohua 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">80</span>. Xiaohua 
 Huang, Abhinav Dhall, Roland Goecke, Matti Pietik&auml;inen, <b>Guoying Zhao</b>. 
 <u>Analyzing group-level emotion with global alignment kernel based approach</u>. IEEE 
-Transactions on Affective Computing, 2020. </font></p>
+Transactions on Affective Computing, 2022. </font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">77</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">79</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
 Ahola, Xiaohua Huang, <b>Guoying Zhao</b>. <u>Leaders and followers identified 
 by emotional mimicry during collaborative learning: A facial expression 
 recognition study on emotional valence</u>. IEEE Transactions on Affective 
 Computing, 2021. </font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font size="4" face="Times New Roman">&nbsp;27<span lang="en-us">6</span>. Henglin Shi, Wei 
+<font size="4" face="Times New Roman">&nbsp;27<span lang="en-us">8</span>. Henglin Shi, Wei 
 Peng, Haoyu Chen, Xin Liu, <b>Guoying Zhao</b>. <u>Multi-scale 3D Shift 
 Graph Convolution Network for Emotion Recognition from 
 Human Actions</u>. IEEE Intelligent Systems. 
 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
-<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">5</span>. Muzammil Behzad, Xiaobai Li, <b>Guoying Zhao</b>. 
+<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">7</span>. Muzammil Behzad, Xiaobai Li, <b>Guoying Zhao</b>. 
 <u>Disentangling 3D/4D Facial Affect Recognition with Faster 
 Multi-view Transformer</u>. IEEE Signal Processing Letters. 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
-<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">4</span>. Li Ji, Qinghui Zhu, Yongqin 
+<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">6</span>. Li Ji, Qinghui Zhu, Yongqin 
 Zhang, Juanjuan Yin, Ruyi Wei, Jinsheng Xiao, Deqiang Xiao, <b>Guoying Zhao</b>.
 <u>Cross-Domain Heterogeneous Residual Network for Single Image Super-Resolution</u>. 
 Neural Networks, 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt">
-<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">3</span>. Dong Huang, Xiaoyi Feng, Haixi 
+<font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">5</span>. Dong Huang, Xiaoyi Feng, Haixi 
 Zhang, Zitong Yu, Jinye Peng, <b>Guoying Zhao</b>, Zhaoqiang Xia.&nbsp; <u>Spatio-Temporal Pain Estimation Network with Measuring Pseudo Heart Rate Gain</u>. 
 IEEE Trans. on Multimedia, 2021.</font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;272. </font>
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;274. </font>
 </span><font face="Times New Roman" size="4">Beijing Chen, Xin Liu, Yuhui Zheng,
 <b>Guoying Zhao</b>, and Yun-Qing Shi. <u>A robust GAN-generated face detection 
 method based on dual-color spaces and an improved Xception</u>. IEEE 
 Transactions on Circuits and Systems for Video Technology (TCSVT), 2022. </font>
 </p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;271. </span>Wei 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;273. </span>Wei 
 Peng, Li Feng, <b>Guoying Zhao</b>, Fang Liu. <u>Learning Optimal K-space 
 Acquisition and Reconstruction using Physics-Informed Neural Networks</u>. CVPR 
 2022. (Acceptance rate: 25.33%) </font>
 </p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;270. </span>
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;272. </span>
 Zitong Yu, Yuming Shen, Jingang Shi, Hengshuang Zhao, Philip Torr, <b>Guoying 
 Zhao</b>. <u>PhysFormer: Facial Video-based Physiological Measurement with 
 Temporal Difference Transformer</u>. CVPR 2022. (Acceptance rate: 25.33%) </font>
 </p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;269. Haoyu Chen, Hao Tang, Zitong 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">71</span>. Haoyu Chen, Hao Tang, Zitong 
 Yu, Nicu Sebe, <b>Guoying Zhao</b>. <u>Geometry-Contrastive Transformer for 
 Generalized 3D Pose Transfer</u>. AAAI Conference on Artificial Intelligence (AAAI 
 2022). (Acceptance rate: 15%) </font>
 </p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;268. Mozhgan PourKeshavarzi, <b>
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">70</span>. Mozhgan PourKeshavarzi, <b>
 Guoying Zhao</b>, Mohammad Sabokrou. <u>Looking Back on Learned Experiences for 
 Class/Task Incremental Learning</u>. The International Conference on Learning 
 Representations (ICLR), 2022.</font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">67</span>. Anja Keskinarkaus, Ruijing 
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">69</span>. Anja Keskinarkaus, Ruijing 
 Yang, Angelos Fylakis, Md. Surat-E-Mostafa, Arto Hautala, Yong Hu, Jinye Peng,
 <b>Guoying Zhao</b>, Tapio Sepp&auml;nen, Jaro Karppinen. <u>Multimedia Tools and 
 Applications</u>. 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;266. 
+<font face="Times New Roman" size="4">&nbsp;26<span lang="en-us">8</span>. 
 Beijing Chen, Wenjin Tan, Yiting Wang, <b>Guoying Zhao</b>.
 <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cluster=7950198336869993283">
 Distinguishing Between Natural and GAN-Generated Face Images by Combining Global 
 and Local Features</a>. Chinese Journal of Electronics, 1-9, 2022.</font></p>
+<p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;267.</font></span><font face="Times New Roman" size="4"><span lang="en-us">
+</span>Yang Liu, Xingming Zhang, Kauttonen Janne, Guoying Zhao. Uncertain Label 
+Correction via Auxiliary Action Unit Graphs for Facial Expression Recognition. 
+26th International Conference on Pattern Recognition (ICPR), 2022.</font></p>
+<p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;266.</font></span><font face="Times New Roman" size="4"> 
+Atif Shah, Haoyu Chen, Henglin Shi, Guoying Zhao. Efficient Dense-Graph 
+Convolutional Network with Inductive Prior Augmentations for Unsupervised 
+Micro-Gesture Recognition. 26th International Conference on Pattern Recognition 
+(ICPR), 2022.</font></p>
+<p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+¡¡</p>
 <p class="MsoNormal" style="margin-top:0.5cm; margin-bottom:0.5cm">
 <span lang="en-us"><font size="5"><b>2021</b></font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
@@ -284,7 +297,8 @@ Muzammil Behzad, Nhat Vo, Xiaobai Li, and <b>Guoying Zhao</b>. <u>Towards
 Reading Beyond Faces for Sparsity-Aware 3D/4D Affect Recognition</u>. 
 Neurocomputing. 2021<span lang="en-us">.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">54</span>. Khanh Tran, Quang-Nhat Vo, Xia<span lang="EN-US" style="line-height: 115%">openg Hong, Xiaobai Li, <b>Guoying Zhao</b>. <u>
+<font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">54</span>.  
+Thuong-Khanh Tran, Quang-Nhat Vo, Xia<span lang="EN-US" style="line-height: 115%">openg Hong, Xiaobai Li, <b>Guoying Zhao</b>. <u>
 Micro-expression spotting: A new benchmark</u>. Neurocomputing, 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">53</span>. Wei Peng, Jingang Shi, Tuomas 
@@ -652,7 +666,8 @@ Analysis with Deep Learning. FG2019.</font></span></font></p>
 Wei Peng, Xiaopeng Hong, <b>Guoying Zhao</b>. Video action recognition via 
 neural architecture searching. ICIP 2019.</font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4"><span style="line-height: 150%">&nbsp;1<span lang="en-us">88</span>. Khanh Tran, Quang-Nhat Vo, Xiaopeng Hong, and <b>Guoying Zhao</b>. Dense 
+<font face="Times New Roman" size="4"><span style="line-height: 150%">&nbsp;1<span lang="en-us">88</span>. </span>Thuong-Khanh Tran, 
+<span style="line-height: 150%">Quang-Nhat Vo, Xiaopeng Hong, and <b>Guoying Zhao</b>. Dense 
 prediction for micro-expression spotting based on deep sequence model, IS&amp;T 
 International Symposium on Electronic Imaging 2019, Imaging and Multimedia 
 Analytics in a Web and Mobile World 2019.</span></font></p>
@@ -662,7 +677,10 @@ Xiaopeng Hong, Haoyu Chen, Dacheng Tao, <b>Guoying Zhao</b>. Hidden States
 Exploration for 3D Skeleton-based Gesture Recognition. &nbsp;IEEE Winter Conference 
 on Applications of Computer Vision (WACV), 2019</font></span></p>
 <p class="MsoNormal style1" style="text-indent: 6px; margin: 14.2pt 0in">
-<span style="line-height: 150%"><span lang="en-us"><font size="4">186.</font></span><font size="4"> Nhat Vo, Khanh Tran, <b>
+<span style="line-height: 150%"><span lang="en-us"><font size="4">186.</font></span><font size="4"> </font></span>
+<font face="Times New Roman" size="4"> 
+Quang-Nhat Vo, 
+Thuong-Khanh Tran, </font><span style="line-height: 150%"><font size="4"> <b>
 Guoying Zhao</b>. 3D facial expression recognition based on multi-view and prior 
 knowledge fusion. IEEE 21st International Workshop on Multimedia Signal 
 Processing (MMSP 2019).</font></span></p>
