--- a/teammembers.htm
+++ b/teammembers.htm
@@ -208,7 +208,7 @@ p
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Xu.jpg" width="125" height="143"></td>
 		<td height="0" align="center" valign="top" width="209">
-		　</td>
+		　<img border="0" src="Lili.jpg" width="135" height="142"></td>
 		<td height="0" align="center" valign="top" width="225">
 		　</td>
 		<td height="0" align="center" valign="top" width="225">
@@ -223,7 +223,9 @@ p
 		University of Information Science and Technology): July 2021 - July. 
 		2022</font></td>
 		<td height="0" align="center" valign="top" width="209">
-		　</td>
+		　<font face="Times New Roman"><b>Ms. Lili LIU</b></font><p style="text-align: center">
+		<font face="Times New Roman">(Northwestern Polytechnic<span lang="en-us">
+		</span>University): Feb. 2022-Feb. 2024</font></td>
 		<td height="0" align="center" valign="top" width="225">
 		　</td>
 		<td height="0" align="center" valign="top" width="225">
