--- a/publications.htm
+++ b/publications.htm
@@ -446,7 +446,7 @@ IEEE Transactions on Image Processing (TI</span><span style="font-family: 'Times
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <span lang="en-us"><font face="Times New Roman" size="4">&nbsp;228. </font></span>
 <font face="Times New Roman" size="4">Zhaoqiang Xia, Wei Peng, Huai-Qian Khor, 
-Xiaoyi Feng and <b>Guoying Zhao</b>. <u>Model and Data Shrinking for 
+Xiaoyi Feng and <b>Guoying Zhao</b>. <u>Revealing the Invisible With Model and Data Shrinking for 
 Composite-database Micro-expression Recognition.</u> IEEE Trans. on Image 
 Processing, 29: 8590 - 8605, 2020.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
