--- a/publications.htm
+++ b/publications.htm
@@ -217,8 +217,11 @@ Representations (ICLR), 2022.</font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">69</span>. Anja Keskinarkaus, Ruijing 
 Yang, Angelos Fylakis, Md. Surat-E-Mostafa, Arto Hautala, Yong Hu, Jinye Peng,
-<b>Guoying Zhao</b>, Tapio Sepp&auml;nen, Jaro Karppinen. <u>Multimedia Tools and 
-Applications</u>. 2022.</font></p>
+<b>Guoying Zhao</b>, Tapio Sepp&auml;nen, Jaro Karppinen. </font>
+<font face="Times New Roman" size="4"><u>Pain fingerprinting using multimodal 
+sensing: pilot study.</u></font> <font face="Times New Roman" size="4">
+Multimedia </font><font face="Times New Roman" size="4">Tools and Applications, 
+81,&nbsp;5717¨C5742, 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;26<span lang="en-us">8</span>. 
 Beijing Chen, Wenjin Tan, Yiting Wang, <b>Guoying Zhao</b>.
