--- a/teammembers.htm
+++ b/teammembers.htm
@@ -163,8 +163,7 @@ p
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
 		<font face="Times New Roman">Mr. Zitong YU</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">　<b><font face="Times New Roman">Mr. 
-		Hui ZHANG</font></b></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">　<b><font face="Times New Roman">M<span lang="zh-cn">s</span>. Hui ZHANG</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
@@ -210,7 +209,7 @@ p
 		<td height="0" align="center" valign="top" width="209">
 		　<img border="0" src="Lili.jpg" width="135" height="142"></td>
 		<td height="0" align="center" valign="top" width="225">
-		　</td>
+		　<img border="0" src="Haotian.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
@@ -220,12 +219,14 @@ p
 		</span>Oct. 2019 - Oct. 2022</font></td>
 		<td width="226" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Assoc. Prof. Xu CHENG </b>(Nanjing 
-		University of Information Science and Technology): July 2021 - July. 
+		University of Information Science and Technology): July 2021 - 
+		<span lang="zh-cn">Nov</span>. 
 		2022</font></td>
 		<td height="0" align="center" valign="top" width="209">
 		　<font face="Times New Roman"><b>Ms. Lili LIU</b></font><p style="text-align: center">
 		<font face="Times New Roman">(Northwestern Polytechnic<span lang="en-us">
-		</span>University): Feb. 2022-Feb. 2024</font></td>
+		</span>University): Feb. 2022<span lang="zh-cn"> </span>-<span lang="zh-cn">
+		</span>Feb. 2024</font></td>
 		<td height="0" align="center" valign="top" width="225">
 		　<font face="Times New Roman"><b>Mr. Haotian LIU</b></font><p style="text-align: center">
 		<font face="Times New Roman">(Central South University): Jan. 2022-Dec. 
