--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -159,6 +159,9 @@ a{font-family:arial,sans-serif}
 <span style="font-family: Times New Roman"><font size="5">PROFESSIONAL 
 ACTIVITIES</font></span></b></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
+<font size="4">-- <b><font face="Times New Roman"><u>2022-present, Member of 
+Finnish Academy of Sciences and Letters </u></font></b> </font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- </font><b><font size="4" face="Times New Roman"><u>2022-present, IEEE 
 Fellow</u> </font></b></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
