--- a/Pic.htm
+++ b/Pic.htm
@@ -18,7 +18,7 @@
   <tr>
     <td width="54%" height="169">
 	<p align="center">
-	<img border="0" src="Guoying1.jpg" width="274" height="285"></p>
+	<img border="0" src="Guoying_2022.jpg" width="274" height="314"></p>
 	<p align="center"><span lang="en-us"><b><font face="Times New Roman">Academy Prof.</font></b></span><font face="Times New Roman"><b><span lang="EN-US"> Guoying Zhao</span></b></font></p>
 	<p align="center"><font face="Times New Roman">&nbsp;&nbsp; 
     		Center for Machine 
